--- a/todo-app/manual-k8-deploy/user-api-config.yml
+++ b/todo-app/manual-k8-deploy/user-api-config.yml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: todo-api-config
+  name: user-api-config
   namespace: todo-app
 data:
   db_url: mongodb:27017
   spring_log_level: INFO
   app_log_level: INFO
+  is_test_mode: false
