--- a/todo-app/manual-k8s-deploy/todo-api-config.yaml
+++ b/todo-app/manual-k8s-deploy/todo-api-config.yaml
@@ -8,3 +8,5 @@ data:
   spring_log_level: INFO
   app_log_level: INFO
   is_test_mode: true
+  #this is the service name and port for the user-api defined in todo-app.yaml
+  user_api_url: "http://user-api:8082"
