--- a/todo-app/manual-k8s-deploy/todo-app.yaml
+++ b/todo-app/manual-k8s-deploy/todo-app.yaml
@@ -76,6 +76,11 @@ spec:
                 configMapKeyRef:
                   name: todo-api-config
                   key: app_log_level
+            - name: USER_API_BASE_URL
+              valueFrom:
+                configMapKeyRef:
+                  name: todo-api-config
+                  key: user_api_url
             - name: AZURE_APP_ID
               valueFrom:
                 secretKeyRef:
