--- a/helm/architech/todo-app/templates/todo-ui-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-ui-deployment.yaml
@@ -19,34 +19,19 @@ spec:
           ports:
             - containerPort: {{.Values.WebUI.ContainerPort}}
           env:
-            - name: IS_TEST_MODE
+            - name: REACT_APP_TEST_MODE
               valueFrom:
                 configMapKeyRef:
                   name: {{.Values.WebUI.ConfigName}}
                   key: is_test_mode
-            - name: AZURE_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: {{.Values.WebUI.SecretName}}
-                  key: azure_client_secret
-            - name: AZURE_APP_ID
-              valueFrom:
-                secretKeyRef:
-                  name: {{.Values.WebUI.SecretName}}
-                  key: azure_app_id
-            - name: AZURE_AD_TENANT
-              valueFrom:
-                secretKeyRef:
-                  name: {{.Values.WebUI.SecretName}}
-                  key: ui_ad_identity
             - name: REACT_APP_CLIENT_ID
               valueFrom:
                 secretKeyRef:
                   name: {{.Values.WebUI.SecretName}}
-                  key: ui_react_app_id
+                  key: azure_app_id
             - name: REACT_APP_TENANT
               valueFrom:
                 secretKeyRef:
                   name: {{.Values.WebUI.SecretName}}
-                  key: ui_react_ad_identity
+                  key: ad_identity
 
