updated to be consistent with helm templates

--- a/todo-app/manual-k8s-deploy/todo-app.yaml
+++ b/todo-app/manual-k8s-deploy/todo-app.yaml
@@ -91,6 +91,11 @@ spec:
                 secretKeyRef:
                   name: todoapp-secrets
                   key: ad_identity
+            - name: AZURE_CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: todoapp-secrets
+                  key: azure_client_secret
       #imagePullSecrets:
       #  - name: registry_credentials
 ---
