boolean values must be quoted

--- a/todo-app/manual-k8s-deploy/todo-ui-config.yaml
+++ b/todo-app/manual-k8s-deploy/todo-ui-config.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: todo-app
 data:
   #This value must be the same in ALL config.yaml files!
-  is_test_mode: false
+  is_test_mode: "false"
