--- a/helm/architech/todo-app/templates/todo-api-config.yaml
+++ b/helm/architech/todo-app/templates/todo-api-config.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{.Values.TodoAPI.ConfigName}}
-  namespace: {{.Values.General.NameSpace}}
+  namespace: {{.Values.Global.NameSpace}}
 data:
   db_url: {{.Values.TodoMongo.ServiceName}}:{{.Values.TodoMongo.ServicePort}}
-  is_test_mode: "{{.Values.General.IsTesting}}"
-  app_log_level: {{.Values.General.LogLevel}}
-  spring_log_level: {{.Values.General.LogLevel}}
+  is_test_mode: "{{.Values.Global.IsTesting}}"
+  app_log_level: {{.Values.Global.LogLevel}}
+  spring_log_level: {{.Values.Global.LogLevel}}
   allowed_origins: "*"
   user_api_url: "http://{{.Values.UserAPI.ServiceName}}:{{.Values.UserAPI.ServicePort}}"
 
