--- a/helm/architech/todo-app/templates/todo-ui-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-ui-deployment.yaml
@@ -1,9 +1,22 @@
-
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{.Values.WebUI.ServiceName}}
+  namespace: {{.Values.Global.NameSpace}}
+spec:
+  type: LoadBalancer
+  ports:
+  - port: {{ .Values.WebUI.ServicePort }}
+  selector:
+    tier: frontend
+    app: {{.Values.WebUI.Name}}
+    environment: {{.Values.Global.Environment}}
+---
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name:  {{.Values.WebUI.Name}}
-  namespace: {{.Values.General.NameSpace}}
+  namespace: {{.Values.Global.NameSpace}}
 spec:
   replicas: {{.Values.WebUI.Replicas}}
   template:
@@ -11,7 +24,7 @@ spec:
       labels:
         app:  {{.Values.WebUI.Name}}
         tier: frontend
-        environment: {{.Values.General.Environment}}
+        environment: {{.Values.Global.Environment}}
     spec:
       containers:
         - name: {{.Values.WebUI.Name}}
