--- a/helm/architech/todo-app/templates/user-api-config.yaml
+++ b/helm/architech/todo-app/templates/user-api-config.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{.Values.UserAPI.ConfigName}}
-  namespace: {{.Values.General.NameSpace}}
+  namespace: {{.Values.Global.NameSpace}}
 data:
   db_url: "mongodb://{{.Values.TodoMongo.ServiceName}}:{{.Values.TodoMongo.ServicePort}}/user-api"
-  is_test_mode: "{{.Values.General.IsTesting}}"
-  app_log_level: {{.Values.General.LogLevel}}
+  is_test_mode: "{{.Values.Global.IsTesting}}"
+  app_log_level: {{.Values.Global.LogLevel}}
