--- a/helm/architech/todo-app/values.yaml
+++ b/helm/architech/todo-app/values.yaml
@@ -3,12 +3,14 @@
 # Declare name/value pairs to be passed into your templates.
 # name: value
 
-General:
+Global:
   Version : 1.0
   Environment: prod
   NameSpace: todo-app
   IsTesting: false
   LogLevel: DEBUG
+  SecretName: todoapp-secrets
+  ImagePullPolicy: Always
 
 WebUI:
   Name: web-ui
@@ -19,7 +21,6 @@ WebUI:
   ServicePort: 80
   ContainerPort: 80
   ConfigName: webui-config
-  SecretName: todoapp-secrets
 
 TodoAPI:
   Name: todo-api
@@ -27,18 +28,9 @@ TodoAPI:
   Image: "architechbootcamp/todo-api"
   ImageTag: "latest"
   Replicas: 1
-  ServicePort: 8080
+  ServicePort: 80
   ContainerPort: 8080
   ConfigName: todoapi-config
-  SecretName: todoapp-secrets
-
-TodoMongo:
-  Name: todo-mongo
-  ServiceName: todo-mongodb
-  Image: "mongo"
-  Replicas: 1
-  ServicePort: 27017
-  ContainerPort: 27017
 
 UserAPI:
   Name: user-api
@@ -49,12 +41,11 @@ UserAPI:
   ServicePort: 8082
   ContainerPort: 8082
   ConfigName: userapi-config
-  SecretName: todoapp-secrets
 
-UserMongo:
-  Name: user-mongo
-  ServiceName: user-mongodb
+MongoDb:
+  Name: mongodb
+  ServiceName: mongodb
   Image: "mongo"
   Replicas: 1
-  ServicePort: 27018
+  ServicePort: 27017
   ContainerPort: 27017
