--- a/helm/architech/todo-app/templates/user-api-deployment.yaml
+++ b/helm/architech/todo-app/templates/user-api-deployment.yaml
@@ -28,35 +28,35 @@ spec:
         environment: {{.Values.Global.Environment}}
     spec:
       containers:
-        - name: {{.Values.UserAPI.Name}}
-          image: {{.Values.UserAPI.Image}}:{{.Values.UserAPI.ImageTag}}
-          ports:
-            - containerPort: {{.Values.UserAPI.ContainerPort}}
-          env:
-            - name: MONGODB_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{.Values.UserAPI.ConfigName}}
-                  key: db_url
-            - name: IS_TEST_MODE
-              valueFrom:
-                configMapKeyRef:
-                  name: {{.Values.UserAPI.ConfigName}}
-                  key: is_test_mode
-            - name: APP_LOG_LEVEL
-              valueFrom:
-                configMapKeyRef:
-                  name: {{.Values.UserAPI.ConfigName}}
-                  key: app_log_level
-            - name: AZURE_APP_ID
-              valueFrom:
-                secretKeyRef:
-                  name: {{.Values.UserAPI.SecretName}}
-                  key: azure_app_id
-            - name: AZURE_IDENTITY_META_DATA
-              valueFrom:
-                secretKeyRef:
-                  name: {{.Values.UserAPI.SecretName}}
-                  key: ad_identity
-      imagePullSecrets:
-        - name: techdemosecret
+      - name: {{.Values.UserAPI.Name}}
+        image: {{.Values.UserAPI.Image}}:{{.Values.UserAPI.ImageTag}}
+        ports:
+        - containerPort: {{.Values.UserAPI.ContainerPort}}
+        env:
+        - name: MONGODB_URL
+          valueFrom:
+            configMapKeyRef:
+              name: {{.Values.UserAPI.ConfigName}}
+              key: db_url
+        - name: IS_TEST_MODE
+          valueFrom:
+            configMapKeyRef:
+              name: {{.Values.UserAPI.ConfigName}}
+              key: is_test_mode
+        - name: APP_LOG_LEVEL
+          valueFrom:
+            configMapKeyRef:
+              name: {{.Values.UserAPI.ConfigName}}
+              key: app_log_level
+        - name: AZURE_APP_ID
+          valueFrom:
+            secretKeyRef:
+              name: {{.Values.Global.SecretName}}
+              key: azure_app_id
+        - name: AZURE_IDENTITY_META_DATA
+          valueFrom:
+            secretKeyRef:
+              name: {{.Values.Global.SecretName}}
+              key: ad_identity
+      #imagePullSecrets:
+      #  - name: techdemosecret
