--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -17,9 +17,9 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
-        add_header "Set-Cookie" 'AZURE_APP_ID=${AZURE_APP_ID}';
+        add_header "Set-Cookie" 'AZURE_APP_ID=${REACT_APP_CLIENT_ID}';
         add_header "Set-Cookie" 'TEST_MODE=${IS_TEST_MODE}';
-        add_header "Set-Cookie" 'AZURE_AD_TENANT=${AZURE_AD_TENANT}';
+        add_header "Set-Cookie" 'AZURE_AD_TENANT=${REACT_APP_TENANT}';
     }
 
 }
