consistent naming for env vars

--- a/todo-app/todo-ui/nginx.conf
+++ b/todo-app/todo-ui/nginx.conf
@@ -18,7 +18,7 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
         add_header "Set-Cookie" 'AZURE_APP_ID=${REACT_APP_CLIENT_ID}';
-        add_header "Set-Cookie" 'TEST_MODE=${IS_TEST_MODE}';
+        add_header "Set-Cookie" 'TEST_MODE=${REACT_APP_TEST_MODE}';
         add_header "Set-Cookie" 'AZURE_AD_TENANT=${REACT_APP_TENANT}';
     }
 
