--- a/helm/architech/todo-app/templates/todo-api-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-api-deployment.yaml
@@ -77,6 +77,6 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: {{.Values.Global.SecretName}}
-                  key: ad_identity
+                  key: ad_identity_meta_data
       #imagePullSecrets:
       #  - name: techdemosecret
