fixed mongodb url and added ad_tenant secret

--- a/helm/architech/todo-app/templates/todo-ui-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-ui-deployment.yaml
@@ -46,5 +46,5 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{.Values.Global.SecretName}}
-              key: ad_identity_meta_data
+              key: ad_tenant
 
