--- a/todo-app/manual-k8s-deploy/user-api-config.yaml
+++ b/todo-app/manual-k8s-deploy/user-api-config.yaml
@@ -4,6 +4,6 @@ metadata:
   name: user-api-config
   namespace: todo-app
 data:
-  db_url: mongodb:27017
+  db_url: mongodb://mongodb:27017
   app_log_level: INFO
   is_test_mode: "false"
