set is_test_mode true by default

--- a/todo-app/manual-k8s-deploy/todo-api-config.yaml
+++ b/todo-app/manual-k8s-deploy/todo-api-config.yaml
@@ -8,6 +8,6 @@ data:
   spring_log_level: INFO
   app_log_level: INFO
   #boolean values must be quoted!
-  is_test_mode: "false"
+  is_test_mode: "true"
   #this is the service name and port for the user-api defined in todo-app.yaml
   user_api_url: "http://user-api:8082"
