--- a/helm/architech/todo-app/values.yaml
+++ b/helm/architech/todo-app/values.yaml
@@ -7,7 +7,7 @@ Global:
   Version : 1.0
   Environment: production
   NameSpace: todo-app
-  IsTesting: false
+  IsTesting: true
   LogLevel: INFO
   SecretName: todoapp-secrets
   ImagePullPolicy: Always
