--- a/todo-app/manual-k8s-deploy/todo-app.yaml
+++ b/todo-app/manual-k8s-deploy/todo-app.yaml
@@ -33,9 +33,9 @@ metadata:
   name: todo-api
   namespace: todo-app
 spec:
-  type: LoadBalancer
   ports:
-  - port: 8080
+  - port: 80
+    targetPort: 8080
   selector:
     app: todo-api
 ---
@@ -52,51 +52,52 @@ spec:
         app: todo-api
     spec:
       containers:
-        - name: todo-api
-          image: architechbootcamp/todo-api:latest
-          ports:
-            - containerPort: 8080
-          env:
-            - name: MONGODB_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: todo-api-config
-                  key: db_url
-            - name: IS_TEST_MODE
-              valueFrom:
-                configMapKeyRef:
-                  name: todo-api-config
-                  key: is_test_mode
-            - name: SPRING_LOG_LEVEL
-              valueFrom:
-                configMapKeyRef:
-                  name: todo-api-config
-                  key: spring_log_level
-            - name: APP_LOG_LEVEL
-              valueFrom:
-                configMapKeyRef:
-                  name: todo-api-config
-                  key: app_log_level
-            - name: USER_API_BASE_URL
-              valueFrom:
-                configMapKeyRef:
-                  name: todo-api-config
-                  key: user_api_url
-            - name: AZURE_APP_ID
-              valueFrom:
-                secretKeyRef:
-                  name: todoapp-secrets
-                  key: azure_app_id
-            - name: AD_IDENTITY_META_DATA_URL
-              valueFrom:
-                secretKeyRef:
-                  name: todoapp-secrets
-                  key: ad_identity_meta_data
-            - name: AZURE_CLIENT_SECRET
-              valueFrom:
-                secretKeyRef:
-                  name: todoapp-secrets
-                  key: azure_client_secret
+      - name: todo-api
+        image: architechbootcamp/todo-api:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8080
+        env:
+        - name: MONGODB_URL
+          valueFrom:
+            configMapKeyRef:
+              name: todo-api-config
+              key: db_url
+        - name: IS_TEST_MODE
+          valueFrom:
+            configMapKeyRef:
+              name: todo-api-config
+              key: is_test_mode
+        - name: SPRING_LOG_LEVEL
+          valueFrom:
+            configMapKeyRef:
+              name: todo-api-config
+              key: spring_log_level
+        - name: APP_LOG_LEVEL
+          valueFrom:
+            configMapKeyRef:
+              name: todo-api-config
+              key: app_log_level
+        - name: USER_API_BASE_URL
+          valueFrom:
+            configMapKeyRef:
+              name: todo-api-config
+              key: user_api_url
+        - name: AZURE_APP_ID
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: azure_app_id
+        - name: AD_IDENTITY_META_DATA_URL
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: ad_identity_meta_data
+        - name: AZURE_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: azure_client_secret
       #imagePullSecrets:
       #  - name: registry_credentials
 ---
@@ -109,6 +110,7 @@ spec:
   type: LoadBalancer
   ports:
   - port: 80
+    targetPort: 80
   selector:
     app: todo-app-ui
 ---
@@ -125,28 +127,29 @@ spec:
         app: todo-app-ui
     spec:
       containers:
-        - name: todo-app-ui
-          image: architechbootcamp/todo-ui:latest
-          ports:
-          - containerPort: 80
-          env:
-          - name: REACT_APP_TEST_MODE
-            valueFrom:
-              configMapKeyRef:
-                name: todo-ui-config
-                key: is_test_mode
-          - name: REACT_APP_CLIENT_ID
-            valueFrom:
-              secretKeyRef:
-                name: todoapp-secrets
-                key: azure_app_id
-          - name: REACT_APP_TENANT
-            valueFrom:
-              secretKeyRef:
-                name: todoapp-secrets
-                key: ad_tenant
-      imagePullSecrets:
-        - name: techdemosecret
+      - name: todo-app-ui
+        image: architechbootcamp/todo-ui:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+        env:
+        - name: REACT_APP_TEST_MODE
+          valueFrom:
+            configMapKeyRef:
+              name: todo-ui-config
+              key: is_test_mode
+        - name: REACT_APP_CLIENT_ID
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: azure_app_id
+        - name: REACT_APP_TENANT
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: ad_tenant
+      #imagePullSecrets:
+      # - name: techdemosecret
 ---
 apiVersion: v1
 kind: Service
@@ -154,9 +157,9 @@ metadata:
   name: user-api
   namespace: todo-app
 spec:
-  type: LoadBalancer
   ports:
-  - port: 8082
+  - port: 80
+    targetPort: 8082
   selector:
     app: user-api
 ---
@@ -175,36 +178,37 @@ spec:
         tier: backend
     spec:
       containers:
-        - name: user-api
-          image: architechbootcamp/user-api:latest
-          ports:
-            - containerPort: 8082
-          env:
-          - name: MONGODB_URL
-            valueFrom:
-              configMapKeyRef:
-                name: user-api-config
-                key: db_url
-          - name: IS_TEST_MODE
-            valueFrom:
-              configMapKeyRef:
-                name: user-api-config
-                key: is_test_mode
-          - name: APP_LOG_LEVEL
-            valueFrom:
-              configMapKeyRef:
-                name: user-api-config
-                key: app_log_level
-          - name: AZURE_APP_ID
-            valueFrom:
-              secretKeyRef:
-                name: todoapp-secrets
-                key: azure_app_id
-          - name: AZURE_IDENTITY_META_DATA
-            valueFrom:
-              secretKeyRef:
-                name: todoapp-secrets
-                key: ad_identity_meta_data
+      - name: user-api
+        image: architechbootcamp/user-api:latest
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 8082
+        env:
+        - name: MONGODB_URL
+          valueFrom:
+            configMapKeyRef:
+              name: user-api-config
+              key: db_url
+        - name: IS_TEST_MODE
+          valueFrom:
+            configMapKeyRef:
+              name: user-api-config
+              key: is_test_mode
+        - name: APP_LOG_LEVEL
+          valueFrom:
+            configMapKeyRef:
+              name: user-api-config
+              key: app_log_level
+        - name: AZURE_APP_ID
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: azure_app_id
+        - name: AZURE_IDENTITY_META_DATA
+          valueFrom:
+            secretKeyRef:
+              name: todoapp-secrets
+              key: ad_identity_meta_data
       #imagePullSecrets:
       #- name: registry_credentials
 
