--- a/ingress/ingress-rule-multiple-host.yml
+++ b/ingress/ingress-rule-multiple-host.yml
@@ -5,8 +5,12 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: pod-details-ingress-multi
+  namespace: ingress-example
+  annotations:
+    ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   rules:
+    #IP is not allowed so I use nip.io DNS service
   - host: v1.192.168.99.100.nip.io
     http:
       paths:
