--- a/helm/architech/todo-app/templates/ingress-rule.yaml
+++ b/helm/architech/todo-app/templates/ingress-rule.yaml
@@ -8,7 +8,8 @@ metadata:
     ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-  - http:
+  - host: {{ .Values.Global.Host }}
+    http:
       paths:
       - path: {{ .Values.WebUI.Path }}
         backend:
