make service type loadbalancer for the todo-app-ui

--- a/helm/architech/todo-app/templates/todo-ui-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-ui-deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: {{.Values.WebUI.ServiceName}}
   namespace: {{.Values.Global.NameSpace}}
 spec:
+  type: LoadBalancer
   ports:
   - port: {{ .Values.WebUI.ServicePort }}
   selector:
