--- a/helm/architech/todo-app/templates/mongodb-deployment.yaml
+++ b/helm/architech/todo-app/templates/mongodb-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name:  {{ .Values.MongoDb.ServiceName }}
-  namespace: {{.Values.Global.NameSpace}}
+  namespace: {{.Values.Global.Namespace}}
 spec:
   ports:
   - port: {{ .Values.MongoDb.ServicePort }}
