--- a/helm/architech/todo-app/templates/todo-api-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-api-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.TodoAPI.ServiceName }}
-  namespace: {{.Values.Global.NameSpace}}
+  namespace: {{.Values.Global.Namespace}}
 spec:
   ports:
   - port: {{ .Values.TodoAPI.ServicePort }}
