--- a/storage/task-pv-volume.yml
+++ b/storage/task-pv-volume.yml
@@ -11,7 +11,13 @@ spec:
   storageClassName: manual
   capacity:
     storage: 10Gi
+  #only once process can read/write
   accessModes:
     - ReadWriteOnce
+  #when the PVC is released, retain the data.
+  #valid values are Retain (default) and Recycle.
+  #Not all volume plugins support Recycle. See the volume plugin for details.
+  persistentVolumeReclaimPolicy: Retain
+  # hostPath volume type so the volume is mapped to a path on the node
   hostPath:
     path: "/tmp/data"
