added comment about PVC

--- a/helm/architech/todo-app/templates/mongodb-deployment.yaml
+++ b/helm/architech/todo-app/templates/mongodb-deployment.yaml
@@ -33,6 +33,9 @@ spec:
       - name: data
         persistentVolumeClaim:
           claimName: {{ .Values.MongoDb.PVC }}
+---
+#Note a default StorageClass needs to be available
+#On the cluster
 apiVersion:
 kind: PersistentVolumeClaim
 metadata:
