--- a/helm/architech/todo-app/templates/2.ingress-role-binding.yaml
+++ b/helm/architech/todo-app/templates/2.ingress-role-binding.yaml
@@ -1,4 +1,5 @@
-apiVersion: rbac.authorization.k8s.io/v1
+#apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
+apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
 kind: RoleBinding
 metadata:
   name: ingress-binding
