--- a/helm/architech/todo-app/templates/todo-api-deployment.yaml
+++ b/helm/architech/todo-app/templates/todo-api-deployment.yaml
@@ -29,6 +29,10 @@ spec:
           image: {{.Values.TodoAPI.Image}}:{{.Values.TodoAPI.ImageTag}}
           ports:
             - containerPort: {{.Values.TodoAPI.ContainerPort}}
+          livenessProbe:
+            httpGet:
+              path: /healthcheck
+              port: {{.Values.TodoAPI.ContainerPort}}
           env:
             - name: MONGODB_URL
               valueFrom:
