--- a/helm/architech/todo-app/templates/user-api-deployment.yaml
+++ b/helm/architech/todo-app/templates/user-api-deployment.yaml
@@ -29,6 +29,10 @@ spec:
         image: {{.Values.UserAPI.Image}}:{{.Values.UserAPI.ImageTag}}
         ports:
         - containerPort: {{.Values.UserAPI.ContainerPort}}
+        livenessProbe:
+          httpGet:
+            path: /healthcheck
+            port: {{.Values.UserAPI.ContainerPort}}
         env:
         - name: MONGODB_URL
           valueFrom:
