--- a/todo-app/todo-ui/docker-compose.build.yml
+++ b/todo-app/todo-ui/docker-compose.build.yml
@@ -15,9 +15,9 @@ services:
       - todo-api
       - user-api
     environment:
-      - AZURE_APP_ID=${AZURE_APP_ID}
+      - REACT_APP_CLIENT_ID=${AZURE_APP_ID}
       - IS_TEST_MODE=${IS_TEST_MODE:-false}
-      - AZURE_AD_TENANT=${AZURE_AD_TENANT}
+      - REACT_APP_TENANT=${AZURE_AD_TENANT}
   todo-api:
     environment:
       MONGODB_URL: 'mongodb:27017'
