set default apiVersion to v1

--- a/rbac/production-rolebinding.yml
+++ b/rbac/production-rolebinding.yml
@@ -4,8 +4,8 @@
 # the cluster level, use ClusterRoleBindings
 
 kind: RoleBinding
-#apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
-apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
+apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
+#apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
 metadata:
   name: production-deployer
   namespace: production
