--- a/rbac/production-role.yml
+++ b/rbac/production-role.yml
@@ -1,6 +1,6 @@
 kind: Role
-#apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
-apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
+apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
+#apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
 metadata:
   name: production-role
   namespace: production
