--- a/rbac/qa-role.yml
+++ b/rbac/qa-role.yml
@@ -3,8 +3,8 @@
 # They are defined locally at the namespace level (Role)
 # or globally at the cluster level (ClusterRole)
 kind: Role
-#apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
-apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
+apiVersion: rbac.authorization.k8s.io/v1 #for v1.8.0++
+#apiVersion: rbac.authorization.k8s.io/v1beta1 #for v1.7.x
 metadata:
   name: qa-role
   namespace: qa
