--- a/helm/architech/todo-app/templates/mongodb-deployment.yaml
+++ b/helm/architech/todo-app/templates/mongodb-deployment.yaml
@@ -43,8 +43,27 @@ metadata:
   labels:
     environment: {{ .Values.Global.Environment }}
 spec:
+  volumeName: {{ .Values.MongoDb.PV }}
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 3Gi
+---
+kind: PersistentVolume
+apiVersion: v1
+metadata:
+  name: {{ .Values.MongoDb.PV }}
+spec:
+  capacity:
+    storage: 10Gi
+  #only once process can read/write
+  accessModes:
+    - ReadWriteOnce
+  #when the PVC is released, retain the data.
+  #valid values are Retain (default), Recycle and Delete.
+  #Not all volume plugins support Recycle. See the volume plugin for details.
+  persistentVolumeReclaimPolicy: Retain
+  # hostPath volume type so the volume is mapped to a path on the node
+  hostPath:
+    path: {{ .Values.MongoDb.HostPath }}
