--- a/helm/architech/todo-app/templates/mongodb-deployment.yaml
+++ b/helm/architech/todo-app/templates/mongodb-deployment.yaml
@@ -31,7 +31,7 @@ spec:
         - containerPort: {{ .Values.MongoDb.ContainerPort }}
         volumeMounts:
         - name: data
-          path: /data/db
+          mountPath: /data/db
       volumes:
       - name: data
         emptyDir: {}
