--- a/jobs/job.yml
+++ b/jobs/job.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       #restartPolicy is be default Always but that does not make sense
       #for Jobs so you must set this explicitly.
-      #If you need a job that run on a regular basis you a CronJob.
+      #If you need a job that run on a regular basis use a CronJob.
       restartPolicy: OnFailure
       containers:
       - name: batch-job
